--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.7",
+    "@dotlottie/react-player": "^1.6.19",
     "@reduxjs/toolkit": "^2.2.5",
     "antd": "^5.18.0",
     "next": "14.2.3",
