--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@dotlottie/react-player": "^1.6.19",
     "@reduxjs/toolkit": "^2.2.5",
     "antd": "^5.18.0",
+    "axios": "^1.7.2",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
