--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@reduxjs/toolkit": "^2.2.5",
     "antd": "^5.18.0",
     "axios": "^1.7.2",
+    "clsx": "^2.1.1",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
     "postcss": "^8",
