--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "dependencies": {
     "@ant-design/icons": "^5.3.7",
     "@dotlottie/react-player": "^1.6.19",
-    "@reduxjs/toolkit": "^2.2.5",
+    "@reduxjs/toolkit": "^2.2.6",
     "antd": "^5.18.0",
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
+    "jwt-decode": "^4.0.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
