--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.52.1",
     "react-redux": "^9.1.2",
     "redux-persist": "^6.0.0",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
