--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.3.7",
     "@dotlottie/react-player": "^1.6.19",
+    "@hookform/resolvers": "^3.9.0",
     "@reduxjs/toolkit": "^2.2.6",
     "antd": "^5.18.0",
     "axios": "^1.7.2",
@@ -23,7 +24,8 @@
     "react-redux": "^9.1.2",
     "redux-persist": "^6.0.0",
     "sonner": "^1.5.0",
-    "tailwind-merge": "^2.3.0"
+    "tailwind-merge": "^2.3.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "postcss": "^8",
