--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-hook-form": "^7.52.1",
     "react-redux": "^9.1.2",
     "redux-persist": "^6.0.0",
+    "sass": "^1.77.7",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
     "zod": "^3.23.8"
