--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "antd": "^5.18.0",
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.11",
     "jwt-decode": "^4.0.0",
     "next": "14.2.3",
     "react": "^18",
